# chuk-mcp-stac

./: ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SPEC.md  fly.toml  mypy.ini  pyproject.toml
.github/workflows/: publish.yml
examples/: alps_snow_demo.py  amazon_deforestation_demo.py  capabilities_demo.py  change_detection_demo.py  coastal_erosion_demo.py  colchester_from_space.py  collection_intel_demo.py  crop_health_demo.py  dubai_growth_demo.py  false_color_demo.py  lake_chad_demo.py  landsat_demo.py  map_demo.py  mosaic_demo.py  singapore_port_demo.py  temporal_composite_demo.py  time_series_demo.py  tool_runner.py  uk_flooding_demo.py  vegas_f1_demo.py  wildfire_scar_demo.py
src/chuk_mcp_stac/: __init__.py  async_server.py  constants.py  server.py
src/chuk_mcp_stac/core/: __init__.py  catalog_manager.py  raster_io.py
src/chuk_mcp_stac/models/: __init__.py  responses.py  stac.py
src/chuk_mcp_stac/tools/: __init__.py
src/chuk_mcp_stac/tools/discovery/: api.py
src/chuk_mcp_stac/tools/download/: __init__.py  api.py
src/chuk_mcp_stac/tools/map/: __init__.py  api.py
src/chuk_mcp_stac/tools/search/: __init__.py  api.py
tests/: conftest.py  test_catalog_manager.py  test_cloud_mask.py  test_constants.py  test_discovery_tools.py  test_download_tools.py  test_map_tools.py  test_models.py  test_raster_io.py  test_raster_io_png.py  test_search_tools.py  test_server.py  test_spectral_index.py
